<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    cardview:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="190dp"
            android:layout_height="180dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:duplicateParentState="true"
            android:ellipsize="none"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/preço_antigo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pre_o_antigo"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/atual"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/parcelas"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
